--- a/README
+++ b/README
@@ -8,3 +8,5 @@ Materia: Projeto Final de Curso 2
 Ferramenta integrada ao jogo War para inserção e edição de mapas
 
 -----Wellcome to the Jungle!!!-----
+
+Estrutura do Banco de Dados pode ser encontrada na pasta bd
